--- a/doc/INSTALL.txt
+++ b/doc/INSTALL.txt
@@ -21,35 +21,11 @@ IPアドレス : 192.168.0.2
 
 CentOSをインストールします。
 
+※インストール完了後、ご利用になられる環境に合わせて適切なセキュリティ設定をお願いします。CentOSに関するセキュリティ設定については、本マニュアルの範囲外となります。
+
 rootユーザに変更します。
 
   $ su -
-
-======================================================================
- 2.1 SELinux の無効化
-======================================================================
-
-SELinuxを無効にします。
-
-  # /usr/sbin/setenforce 0
-
-自動起動を無効にします。
-
-  # vi /etc/sysconfig/selinux
-  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-  SELINUX=disabled    #変更
-  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-
-  ※セキュリティ設定は環境に応じて適切に設定してください。
-
-======================================================================
- 2.2 Firewall の無効化
-======================================================================
-
-iptablesを停止し、自動起動を無効にします。
-
-  # /sbin/service iptables stop
-  # /sbin/chkconfig iptables off
 
 **********************************************************************
  3 事前準備
