--- a/doc/CHANGES.txt
+++ b/doc/CHANGES.txt
@@ -1,4 +1,11 @@
-﻿1.0.1
+﻿1.0.2
+  * インストールマニュアルを修正
+  * 管理画面からユーザを新規作成した際にプロフィールデータが作成されない場合がある現象を修正
+  * 上記に関連して、ユーザのプロフィール画面でエラーが発生することがある現象を修正
+  * アップロードしたプロフィール画像を削除した際にサーバーエラーが発生することがある現象を修正
+  * 削除済みの画像をプロフィール写真として登録しようとした際の動作を修正
+
+1.0.1
   * ログイン時に特定のページに遷移しログインできなくなることがある不具合を修正
 
 1.0.0
