--- a/doc/INSTALL.txt
+++ b/doc/INSTALL.txt
@@ -1,4 +1,4 @@
-## Joruri Plus+ 1.0.0 インストールマニュアル                2012.11.08
+## Joruri Plus+ 1.0.2 インストールマニュアル                2013.06.28
 
 **********************************************************************
  1 想定環境
@@ -7,7 +7,7 @@
 [システム]
 OS         : CentOS 6.3
 Webサーバ  : Apache 2.2
-DBシステム : MySQL 5, MongoDB 1.6.5
+DBシステム : MySQL 5, MongoDB 1.8.5
 Ruby       : 1.9.2
 Rails      : 3.0.0
 Mailサーバ : SMTP
@@ -47,7 +47,7 @@ rootユーザに変更します。
 必要なパッケージをダウンロードします。
 
   # cd /usr/local/src
-  # wget http://joruri.org/download/joruriplus/joruriplus-1.0.0.tar.gz
+  # wget http://joruri.org/download/joruriplus/joruriplus-1.0.2.tar.gz
   # wget ftp://ftp.ruby-lang.org/pub/ruby/1.9/ruby-1.9.2-p290.tar.gz
   # wget http://rubyforge.org/frs/download.php/74445/rubygems-1.6.2.tgz
 
@@ -59,34 +59,43 @@ Joruriユーザを作成します。
 Joruriソースコードを設置します。
 
   # mkdir /var/share
-  # tar xvzf joruriplus-1.0.0.tar.gz -C /var/share
+  # tar xvzf joruriplus-1.0.2.tar.gz -C /var/share
   # chown -R joruri:joruri /var/share/joruriplus
 
 MongoDBのインストール ---------------------------------------
 ゲストOSへパッケージの取得・管理リポジトリを追加します。
+
+64bit OSの場合
+
   # vi /etc/yum.repos.d/CentOS-Base.repo
   - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
     [10gen]
     name=10gen Repository
-    baseurl=http://downloads.mongodb.org/distros/centos/5.4/os/$basearch/
+    baseurl=http://downloads-distro.mongodb.org/repo/redhat/os/x86_64
     gpgcheck=0
-    enabled=0
+    enabled=1
   - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
 MongoDBをインストールします。
-  # yum -y --enablerepo=10gen install mongo-stable*
+  # yum install mongo18-10gen.x86_64 mongo18-10gen-server.x86_64 --enablerepo=10gen
+
+32bit OSの場合
+
+  # vi /etc/yum.repos.d/CentOS-Base.repo
+  - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+    [10gen]
+    name=10gen Repository
+    baseurl=http://downloads-distro.mongodb.org/repo/redhat/os/i686
+    gpgcheck=0
+    enabled=1
+  - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+MongoDBをインストールします。
+  # yum install mongo18-10gen.i686 mongo18-10gen-server.i686 --enablerepo=10gen
 
 起動、自動起動を設定します。
   # /sbin/service mongod start
   # /sbin/chkconfig mongod on
-
-※MongoDBが起動しなくなった場合の対応
-  異常終了などによりMongoDBにロックが掛かり起動できないことがあります。
-  その場合は次のコマンドを実行してください。
-
-  # rm /var/lib/mongo/mongod.lock
-  # /sbin/service mongod --dbpath=/var/lib/mongo/ --repair
-  # /sbin/service mongod start
 
 **********************************************************************
  4 Apache の設定
@@ -117,11 +126,13 @@ MongoDBをインストールします。
   # vi /etc/my.cnf
   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   [mysqld]
-  default-character-set=utf8    #追加
+  character-set-server=utf8
+  default-table-type=myisam
 
-  [client]                      #追加（末尾に追加）
-  default-character-set=utf8    #追加
+  [client]
+  default-character-set = utf8
   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  ## [mysqld]に設定を追加、[client]と設定を追加。
 
 MySQLを起動します。
 
@@ -205,14 +216,16 @@ Joruriユーザに変更します。
 
 環境に応じて設定ファイルを編集します。
 
-Joruri Plus 基本設定
+Joruri Plus+ 基本設定
 
   $ vi config/core.yml
   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-  title  : Joruri Plus
-  uri    : http://192.168.0.2/
-  proxy  : ※プロキシ
-  reminder : ※JoruriGwとのリマインダー連携
+  production:
+    title  : Joruri Plus+
+    uri    : http://192.168.0.2/
+    host   : 192.168.0.2
+    proxy  : ※プロキシ
+    reminder : ※JoruriGwとのリマインダー連携
   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
   ※プロキシ
@@ -220,7 +233,7 @@ Joruri Plus 基本設定
   http://example:8080/ の様に記述してください。
 
   ※JoruriGw とのリマインダー連携
-  JoruriGw v2.0.1以降は、JoruriPlus+とのリマインダー連携機能を備えています。
+  JoruriGw v2.0.1以降は、Joruri Plus+とのリマインダー連携機能を備えています。
   プロジェクトの更新情報をJoruriGwのリマインダーに表示する場合はon
   連携を利用しない場合はoffを指定してください。
   また、連携を利用する際はDB接続情報の「jorurigw」の項目にJoruriGwのDB接続情報を記述してください。
@@ -244,15 +257,19 @@ VirtualHost設定
 
 データベースを作成します。
 
-  $ /usr/bin/mysql -u root -p -e "create database joruri_plus"
+  $ /usr/bin/mysql -u root -ppass -e "create database joruri_plus"
+
+テーブルを作成します。
+
+  $ rake db:schema:load RAILS_ENV=production
 
 初期データを登録します。
 
-  $ /usr/bin/mysql -u root -p joruri_plus < ./db/joruri_plus.sql
+  $ rake db:seed RAILS_ENV=production
 
-  $ /usr/bin/mongoimport --db joruri_plus --collection sns_profiles --file ./db/profiles.json
+サンプルデータを登録します。
 
-  $ /usr/bin/mongoimport --db joruri_plus --collection sns_managements --file ./db/managements.json
+  $ rake db:seed:demo RAILS_ENV=production
 
 ======================================================================
  8.3 VirtualHost の反映
@@ -267,7 +284,7 @@ Apache を再起動します。
   # /sbin/service httpd configtest
   # /sbin/service httpd restart
 
-ここまでの手順で Joruri Plus にアクセスすることができます。
+ここまでの手順で Joruri Plus+ にアクセスすることができます。
 
   ポータル画面 : http://192.168.0.2/
 
@@ -322,7 +339,6 @@ Apache を再起動します。
 **********************************************************************
 削除期間が過ぎた情報を削除します。
 以下の例は毎日3時にユーザーの一行メッセージをリセットします。
-動作環境が development 以外の場合は -e development の箇所をご利用の環境に書き換えてください。
 例）
 rails runner -e development 'Scriptname' → rails runner -e production 'Scriptname'
 
@@ -330,7 +346,7 @@ rails runner -e development 'Scriptname' → rails runner -e production 'Scriptn
   $ crontab -e
   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   00 3 * * * /usr/local/bin/ruby /var/share/joruriplus/script/rails runner \
-    -e development 'Sns::Script::Tool.message_reset'
+    -e production 'Sns::Script::Tool.message_reset'
   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
 **********************************************************************
